# ai-dev-tools

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: sample_output.txt
src/git_aiblame/: __init__.py  __main__.py  blame.py  cli.py  config.py  detector.py  formatter.py
tests/: __init__.py  test_blame.py  test_detector.py  test_formatter.py
