[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "git-aiblame"
version = "0.1.0"
description = "Git blame with AI attribution detection"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Twin Pine Labs"}
]
keywords = ["git", "blame", "ai", "attribution", "claude", "copilot"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Version Control :: Git",
]

[project.scripts]
git-aiblame = "git_aiblame.cli:main"

[project.urls]
Homepage = "https://github.com/twinpinelabs/ai-dev-tools"
Repository = "https://github.com/twinpinelabs/ai-dev-tools"

[tool.setuptools.packages.find]
where = ["src"]
